--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -6,8 +6,8 @@
   "main": "src/index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-  "dev":"pnpm dlx tsx --watch src/index.ts",
-    "check-types":"tsc --noEmit"
+    "dev": "pnpm dlx tsx --watch src/index.ts --port 3003",
+    "check-types": "tsc --noEmit"
   },
   "keywords": [
     "ecommerce",
@@ -20,8 +20,9 @@
   "author": "Mekin Jemal",
   "license": "ISC",
   "dependencies": {
+    "@repo/typescript-config": "workspace:*",
+    "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
-    "@repo/typescript-config":"workspace:*",
     "express": "^5.1.0"
   }
 }
