--- a/apps/payment-service/package.json
+++ b/apps/payment-service/package.json
@@ -1,14 +1,20 @@
 {
   "name": "payment-service",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "type":"module",
-
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "check-types": "tsc --noEmit"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@hono/node-server": "^1.19.5",
+    "hono": "^4.9.9"
+  },
+  "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
+    "@types/node": "^20.11.17",
+    "tsx": "^4.7.1",
+    "typescript": "^5.8.3"
+  }
 }
