--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -6,11 +6,16 @@
     "dev": "next dev  --port 3001",
     "build": "next build",
     "start": "next start",
-   "lint": "next lint --max-warnings 0",
+    "lint": "next lint --max-warnings 0",
     "check-types": "tsc --noEmit"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "better-auth": "^1.3.24",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
     "npm": "^11.6.1",
@@ -18,6 +23,7 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.61.1",
     "react-toastify": "^11.0.5",
+    "tailwind-merge": "^3.2.0",
     "zod": "^4.1.11",
     "zustand": "^5.0.7"
   },
@@ -29,6 +35,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.2.5",
     "typescript": "^5"
   }
 }
