--- a/apps/payment-service/package.json
+++ b/apps/payment-service/package.json
@@ -2,7 +2,7 @@
   "name": "payment-service",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "tsx watch src/index.ts --port 3004",
     "build": "tsc",
     "start": "node dist/index.js",
     "check-types": "tsc --noEmit"
