--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
+    "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "better-auth": "^1.3.24",
@@ -18,11 +19,14 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.535.0",
     "next": "15.4.5",
+    "next-themes": "^0.4.6",
     "npm": "^11.6.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.61.1",
+    "react-hook-form": "^7.63.0",
     "react-toastify": "^11.0.5",
+    "sonner": "^2.0.7",
+    "sooner": "^1.1.4",
     "tailwind-merge": "^3.2.0",
     "zod": "^4.1.11",
     "zustand": "^5.0.7"
