--- a/.gitignore
+++ b/.gitignore
@@ -1,38 +1,73 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# Dependencies
-node_modules
-.pnp
+# ===============================
+# Node dependencies
+# ===============================
+node_modules/
+.pnp/
 .pnp.js
 
-# Local env files
+# ===============================
+# Local environment files
+# ===============================
 .env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# ===============================
 # Testing
-coverage
+# ===============================
+coverage/
 
-# Turbo
-.turbo
+# ===============================
+# TurboRepo
+# ===============================
+.turbo/
 
+# ===============================
 # Vercel
-.vercel
+# ===============================
+.vercel/
 
-# Build Outputs
+# ===============================
+# Build outputs
+# ===============================
 .next/
 out/
-build
-dist
+build/
+dist/
 
+# ===============================
+# Prisma generated clients
+# ===============================
+**/generated/
+**/prisma-client/
 
-# Debug
+# ===============================
+# Docker
+# ===============================
+docker-compose.override.yml
+docker-compose.override.yaml
+
+# ===============================
+# Debug logs
+# ===============================
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# ===============================
 # Misc
+# ===============================
 .DS_Store
 *.pem
+
+# ===============================
+# Sensitive folders inside packages (monorepo)
+# ===============================
+packages/**/secrets/
+packages/**/keys/
+packages/**/private/
+packages/**/sensitive/
+packages/**/env/
+packages/**/generated/
