--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -20,10 +20,17 @@
   "author": "Mekin Jemal",
   "license": "ISC",
   "dependencies": {
-    "@repo/typescript-config": "workspace:*",
-    "@types/cors": "^2.8.19",
-    "@types/express": "^5.0.3",
+    "better-auth": "^1.3.24",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^5.0.3",
+    "@repo/product-db": "workspace:*",
+    "@repo/kafka": "workspace:*",
+    "@repo/auth": "workspace:*"
+  },
+  "devDependencies": {
+    "@repo/typescript-config": "workspace:*",
+    "@repo/types": "workspace:*",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3"
   }
 }
