--- a/apps/product-service/package.json
+++ b/apps/product-service/package.json
@@ -20,12 +20,14 @@
   "author": "Mekin Jemal",
   "license": "ISC",
   "dependencies": {
+    "@repo/db": "workspace:*",
     "better-auth": "^1.3.24",
     "cors": "^2.8.5",
     "express": "^5.0.3",
     "@repo/product-db": "workspace:*",
     "@repo/kafka": "workspace:*",
     "@repo/auth": "workspace:*"
+    
   },
   "devDependencies": {
     "@repo/typescript-config": "workspace:*",
