--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "turbo run dev",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "check-types": "turbo run check-types",
+    "docker:up": "docker-compose up",
+    "docker:up:build": "docker-compose up -d --build",
+    "docker:mock": "echo 'Mock Docker command executed!'"
   },
   "devDependencies": {
     "prettier": "^3.6.2",
