--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -4,28 +4,26 @@
   "main": "index.js",
   "type": "module",
   "exports": {
-   "./server":{
-    "types":"./dist/server/index.d.ts",
-    "default":"./dist/server.js"
-   },
-   "./client":{
-    "types":"./dist/client/index.d.ts",
-    "default":"./dist/client.js"
-   }
+      ".": "./src/index.ts",
+    "./auth": {
+      "types": "./dist/server/index.d.ts",
+      "default": "./dist/server.js"
+    },
+    "./client": {
+      "types": "./dist/client/index.d.ts",
+      "default": "./dist/client.js"
+    }
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "check-types": "tsc --noEmit",
-    "build": "tsc -b",
-    "dev":"tsc --watch"
-
+    "check-types": "tsc --noEmit"
   },
-  
-
   "dependencies": {
     "@repo/db": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
+    "@types/node": "^24.6.2",
     "better-auth": "^1.3.26",
-    "server-only":"^0.0.1"
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "typescript": "latest"
