complete setting kaffka braocker with multple broaker

--- a/turbo.json
+++ b/turbo.json
@@ -26,6 +26,21 @@
     },
     "db:deploy": {
       "cache": false
+    },
+    "generate": {
+      "cache": false
+    },
+    "migrate": {
+      "cache": false
+    },
+    "studio": {
+      "cache": false,
+      "persistent": true
+    },
+    "seedsall": {
+      "cache": false,
+      "persistent": true
     }
-  }
+}
+
 }
