Refactor authentication middleware: migrate to @repo/auth, remove old middleware, and update routes accordingly

--- a/packages/auth/tsconfig.json
+++ b/packages/auth/tsconfig.json
@@ -6,6 +6,6 @@
         "outDir": "dist",
         "rootDir": "src",
     },
-    "include": ["src","*.ts"],
+    "include": ["src","*.ts", "../../apps/product-service/src/middleware/authMiddleware.ts"],
     "exclude": ["node_modules","dist","**/*.test.ts"]
 }
