--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "exports": {
-      ".": "./src/index.ts",
+    ".": "./src/index.ts",
     "./auth": {
       "types": "./dist/server/index.d.ts",
       "default": "./dist/server.js"
@@ -21,8 +21,10 @@
   "dependencies": {
     "@repo/db": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@types/express": "^5.0.3",
     "@types/node": "^24.6.2",
     "better-auth": "^1.3.26",
+    "express": "^5.0.3",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
