--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -25,6 +25,8 @@
     "@types/node": "^24.6.2",
     "better-auth": "^1.3.26",
     "express": "^5.0.3",
+    "fastify": "^5.6.1",
+    "hono": "^4.9.9",
     "server-only": "^0.0.1"
   },
   "devDependencies": {
