--- a/apps/user-service/package.json
+++ b/apps/user-service/package.json
@@ -1,29 +1,28 @@
 {
-  "name": "auth-service",
+  "name": "user-service",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
   "type": "module",
   "scripts": {
-    "dev": "pnpm dlx tsx --env-file=.env --watch src/index.ts",
+    "dev": "pnpm dlx tsx --watch src/index.ts",
     "check-types": "tsc --noEmit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@clerk/express": "^1.7.30",
-    "cors": "^2.8.5",
-    "express": "^5.0.3",
-    "@repo/kafka": "workspace:*",
+    "@repo/auth": "workspace:*",
     "@repo/db": "workspace:*",
-    "@repo/auth": "workspace:*"
+    "@repo/kafka": "workspace:*",
+    "better-auth": "^1.3.27",
+    "cors": "^2.8.5",
+    "express": "^5.0.3"
   },
   "devDependencies": {
-    "@repo/typescript-config": "workspace:*",
     "@repo/types": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3"
-
   }
 }
