--- a/packages/auth/package.json
+++ b/packages/auth/package.json
@@ -24,6 +24,7 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.6.2",
     "better-auth": "^1.3.26",
+    "dotenv": "^17.2.3",
     "express": "^5.0.3",
     "fastify": "^5.6.1",
     "hono": "^4.9.9",
