--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -26,7 +26,7 @@
     "generate:product": "npx prisma generate --schema ./prisma/product/product.prisma",
     "generate:order": "npx prisma generate --schema ./prisma/order/order.prisma ",
     "generate": "pnpm generate:auth && pnpm generate:product && pnpm generate:order",
-    "migrate:auth": "npx prisma migrate dev --schema ./prisma/auth/auth.prisma  ",
+    "migrate:auth": "npx prisma migrate dev --force --schema ./prisma/auth/auth.prisma  ",
     "migrate:order": "npx prisma migrate dev --schema ./prisma/order/order.prisma",
     "migrate": "pnpm migrate:auth  && pnpm migrate:order",
    
