--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ node_modules/
 .env.test.local
 .env.production.local
 
+
 # ===============================
 # Testing
 # ===============================
@@ -71,3 +72,7 @@ packages/**/private/
 packages/**/sensitive/
 packages/**/env/
 packages/**/generated/
+packages/**.db*
+
+
+
